Fix action buttons from wrapping in tarkasta.html

--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -6,6 +6,10 @@
   margin-bottom: $padding-large-vertical;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 @mixin input() {
   border-radius: $input-border-radius;
 }
